Changelog:

3.17 (2026-01-14)
- Fixed comment for 'The Twilight Lexicon'
- Fixed item for 'The Battle of Darrowshire' quest
- Fixed the DireMaul Blacksmithing selection crashing the addon
- Added new flightpaths added to Kalimdor & Eastern Kingdoms

3.16 (2016-01-12)
- Removed the 0xp warning for the quest 'Medallion of Faith'
- ExtraPrep: Fixed some issues with the Rhok'delar quests that can be added
- ExtraPrep: Added class books & Quel'Serrar DireMaul quests to the 'Blacksmithing - Dire Maul' selection
- ExtraPrep: Quests from unselected extraprep no longer shows up on the 'Items' tab
- ExtraPrep: Scepter of the Sands quests now only show items if you have done their prequests
- Companion: No longer goes to the next step if you're missing 0 items, as it could lead to unexpecting jumping now before release.
- Companion: Fixed weird behaviour with the Bijou quest
- Added the 2 Morrowgrain quests that come after 'Un'goro Soil'. Low exp but almost free.

3.15 (2026-01-12)
- We realized 'questlog' quests didn't calculate the correct exp based on your level. Please check that your questlog quests are still good! If quests now give low exp, you need to fix it!
-- 'Summoning Shadra' has been removed as a questlog quest because of this. If you already prepared it, please turn it in (don't abandon)
-- Addon will show a warning as well the first time you log in after updating

- Implemented first version of the new 'Extras - Mailbox' feature. This feature helps manage your items with your bank & mailbox, but is optional.
-- This is pretty complex and a separate description window has been made, please read through it thoroughly if you're interested. We're still testing it, but it's published in case you want to test it or try it out
-- The 'Companion' can be opened from the extras tab, from '/tbcprep companion' or from the buttons added to the Mail & Bank interface.
