@@ -184,12 +184,16 @@ function CasualTBCPrep.Settings.LoadDefaults()
 	if charMajorVersionVal == nil or charMajorVersionVal < CasualTBCPrep.Settings.VersionCheck_RouteSelection then
 		CasualTBCPrep.Settings.SetCharSetting(CasualTBCPrep.Settings.SelectedRoute, nil)
 	end
-	if charMajorVersionVal == nil or charMajorVersionVal < CasualTBCPrep.Settings.VersionCheck_QuestlogOverhaul1 then
+	-- 3.15 Warning
+	if CasualTBCPrep.Settings.CurrentMajorVersionValue <= 1.17 and (charMajorVersionVal == nil or charMajorVersionVal < CasualTBCPrep.Settings.VersionCheck_QuestlogOverhaul1) then
 		CasualTBCPrep.NotifyUserWarning("WARNING. In this update we realized questlog quests didn't calculate the correct exp based on your level.\rPlease check that your questlog quests are still good! If quests now give low exp, you need to fix it!")
 
-		C_Timer.After(10, function()
-			CasualTBCPrep.W_WarningNotice.Show("3.15 Update (2026-01-12)", nil, "warn_qlog_overhaul", nil)
-		end)
+		local playerLevel = UnitLevel("player")
+		if playerLevel == nil or playerLevel == 60 then
+			C_Timer.After(10, function()
+				CasualTBCPrep.W_WarningNotice.Show("3.15 Update (2026-01-12)", nil, "warn_qlog_overhaul", nil)
+			end)
+		end
 	end
 
 
